2020-06-11 Wiley E. Hill <wileyhill@gmail.com>

    * src/iface/i_status.c: Remove setting sensitivity on non-existence
      Page/Documentation menu item.

2020-06-10 Wiley E. Hill <wileyhill@gmail.com>

    * etc/system-gschemrc.scm: Remove hotkey <Shift>HO for hierarchy
      documentation and remove hierarchy-documentation from the page
      menu. Add tooltip for hierarchy-documentation help menu item.

2020-06-09 Wiley E. Hill <wileyhill@gmail.com>

    * src/Makefile.am: Pass CPPFLAGS to `guile-snarf', see commit to
      master branch 2019-10-03, d7fc8d933c41324d0309a3e9abf36b13347b5fbe.
      This allows running
        make clean
        make CPPFLAGS=-DSCM_DEBUG_TYPING_STRICTNESS=2
        # ...fix errors...
        make clean
        make
      in order to detect SCM typing errors.

2020-06-06 Wiley E. Hill <wileyhill@gmail.com>

    * po/ar.po: Update Arabic translations.
    * po/bs.po: Update Bosnian translations
    * po/ca.po: Update Catalan translations.
    * po/da.po: Update Danish translations.
    * po/fi.po: Update Finnish translations.
    * po/ru.po: Update Russian translations.
    * po/sv.po: Update Swedish translations.
    * po/tr.po: Update Turkish translations.
    * po/uk.po: Update Ukrainian translations.

2020-05-30 Wiley E. Hill <wileyhill@gmail.com>

    * po/ar.po: Update Arabic translations.
    * po/bs.po: Update Bosnian translations
    * po/ca.po: Update Catalan translations.
    * po/da.po: Update Danish translations.
    * po/de.po: Update German translations.
    * po/fi.po: Update Finnish translations.
    * po/sv.po: Update Swedish translations.
    * po/tr.po: Update Turkish translations.
    * po/uk.po: Update Ukrainian translations.

2020-05-24 Wiley E. Hill <wileyhill@gmail.com>

    * po/ar.po: Update Arabic translations.
    * po/bs.po: Update Bosnian translations
    * po/de.po: Update German translations.
    * po/el.po: Update Greek translations
    * po/es.po: Update Spanish translations.